--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.gms.google-services")
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -47,17 +47,57 @@ android {
     }
 }
 
-dependencies {
+// Define dependency variables
+ext {
+    nav_version = "2.7.7"
+    firebase_bom_version = "32.2.2"
+    coil_version = "2.4.0"
+    retrofit_version = "2.9.0"
+    coroutines_version = "1.7.3"
+}
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+dependencies {
+    // Core dependencies
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
+
+    // Compose dependencies
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.core:core-ktx:1.12.0'
+
+    // Navigation Compose
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    // ConstraintLayout Compose
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    // Firebase dependencies
+    implementation(platform("com.google.firebase:firebase-bom:$firebase_bom_version"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-database-ktx")
+    implementation("com.google.firebase:firebase-firestore-ktx")
+    implementation("com.google.firebase:firebase-storage-ktx")
+
+    // Coil Compose
+    implementation("io.coil-kt:coil-compose:$coil_version")
+
+    // Compose Runtime LiveData
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
+
+    // Retrofit and Coroutines
+    implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
+    implementation("com.squareup.retrofit2:converter-gson:$retrofit_version")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
+
+    // Viewmodel Compose
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0")
+
+    // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -65,22 +105,4 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    def nav_version = "2.7.7"
-
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-
-    implementation(platform 'com.google.firebase:firebase-bom:32.2.2')
-    implementation("com.google.firebase:firebase-analytics-ktx")
-    implementation("com.google.firebase:firebase-auth-ktx")
-    implementation("com.google.firebase:firebase-database-ktx")
-    implementation("com.google.firebase:firebase-firestore-ktx")
-    implementation("com.google.firebase:firebase-storage-ktx")
-
-    implementation("io.coil-kt:coil-compose:2.4.0")
-
-    implementation "androidx.compose.runtime:runtime-livedata:1.5.0"
-
 }
