--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,6 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -61,11 +60,11 @@ ext {
 dependencies {
     // Core dependencies
     implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.2'
     implementation 'androidx.activity:activity-compose:1.9.0'
 
     // Compose dependencies
-    implementation platform('androidx.compose:compose-bom:2024.05.00')
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
@@ -78,7 +77,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     // Firebase dependencies
-    implementation(platform("com.google.firebase:firebase-bom:$firebase_bom_version"))
+    implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.firebase:firebase-database-ktx")
@@ -89,7 +88,7 @@ dependencies {
     implementation("io.coil-kt:coil-compose:$coil_version")
 
     // Compose Runtime LiveData
-    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.8"
 
     // Retrofit and Coroutines
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
@@ -97,58 +96,36 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
 
     // Viewmodel Compose
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.8.1")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.8.2")
 
     // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.05.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2024.06.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    implementation("io.github.cdimascio:java-dotenv:5.2.2")
+    // dotenv
+    implementation "io.github.cdimascio:dotenv-kotlin:6.2.2"
 
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.1'
-    implementation 'androidx.activity:activity-compose:1.9.0'
-    implementation platform('androidx.compose:compose-bom:2024.05.00')
-    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.9.20")
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.05.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    implementation "androidx.compose.material:material:1.6.7"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.1"
+    // Material
+    implementation "androidx.compose.material:material:1.6.8"
+    implementation "androidx.compose.material:material-icons-extended:1.6.8"
     implementation "com.google.android.material:compose-theme-adapter:1.2.1"
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
+    // OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
 
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // CameraX
     def cameraxVersion = "1.4.0-beta01"
-    implementation"androidx.camera:camera-camera2:$cameraxVersion"
-    implementation"androidx.camera:camera-lifecycle:$cameraxVersion"
-    implementation"androidx.camera:camera-view:$cameraxVersion"
-    implementation"androidx.camera:camera-core:$cameraxVersion"
-
-    implementation "io.coil-kt:coil-compose:2.4.0"
-
-    implementation (platform 'com.google.firebase:firebase-bom:33.1.0')
-    implementation 'com.google.firebase:firebase-analytics'
-
+    implementation "androidx.camera:camera-camera2:$cameraxVersion"
+    implementation "androidx.camera:camera-lifecycle:$cameraxVersion"
+    implementation "androidx.camera:camera-view:$cameraxVersion"
+    implementation "androidx.camera:camera-core:$cameraxVersion"
 }
